--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ListBaoGia.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ListBaoGia.cshtml
@@ -18,6 +18,7 @@
                     <th>Tổng giá trị đơn hàng thực tế</th>
                     <th>Sale báo giá</th>
                     <th>Sửa</th>
+                    <th>Lên PO cho báo giá</th>
                 </tr>
             </thead>
             <tbody>
@@ -30,6 +31,9 @@
                     <td>{{item.TEN_NGUOI_BAO_GIA}}</td>
                     <td>
                         <a href="/KinhDoanh/BaoGia/EditBaoGia/{{item.SO_BAO_GIA}}">Sửa báo giá</a>
+                    </td>
+                    <td>
+                        <a href="/KinhDoanh/BaoGia/BaoGiaLenPO/{{item.SO_BAO_GIA}}">Lên PO</a>
                     </td>
                 </tr>
             </tbody>
