--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ChiTietDonPO.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ChiTietDonPO.cshtml
@@ -198,13 +198,21 @@
                                         </td>
                                         <td style="border-left: 0px !important">&nbsp;</td>
                                     </tr>
-
+                                    <tr height="30">
+                                        <td align="center" colspan="6" style="border-left:none;font-weight:bold">
+                                            Phí vận chuyển
+                                        </td>
+                                        <td style="width:87px; text-align:right;  border-right: none;font-weight:bold">
+                                            {{thongtinchung.PHI_VC | number:0}}
+                                        </td>
+                                        <td style="border-left: 0px !important">&nbsp;</td>
+                                    </tr>
                                     <tr height="30">
                                         <td align="center" colspan="6" style="border-left: none;font-weight:bold">
                                             Tổng cộng
                                         </td>
                                         <td style="width:87px;text-align:right;  border-right: none;font-weight:bold">
-                                            {{thongtinchung.TONG_TIEN_HANG + thongtinchung.TONG_TIEN_THUE_GTGT |  number:0}}
+                                            {{thongtinchung.TONG_TIEN_HANG + thongtinchung.TONG_TIEN_THUE_GTGT + thongtin.PHI_VC |  number:0}}
                                         </td>
                                         <td style="border-left: 0px !important">&nbsp;</td>
                                     </tr>
