--- a/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/ChiTietPO.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/ChiTietPO.cshtml
@@ -173,8 +173,8 @@
                                         </td>
                                         <td style="width:57px; text-align:center">{{item.SO_LUONG}}</td>
                                         <td style="width:47px; text-align:center"> {{item.DVT}}</td>
-                                        <td align="right">{{item.DON_GIA | currency:""}}</td>
-                                        <td style="width:87px; text-align:right">{{item.THANH_TIEN_HANG | currency:""}}</td>
+                                        <td align="right">{{item.DON_GIA | number:0}}</td>
+                                        <td style="width:87px; text-align:right">{{item.THANH_TIEN_HANG | number:0}}</td>
                                     </tr>
                                     <tr height="30">
                                         <td height="30" colspan="8" style="height:30px;">
@@ -200,13 +200,21 @@
                                         </td>
                                         <td style="border-left: 0px !important">&nbsp;</td>
                                     </tr>
-
+                                    <tr height="30">
+                                        <td align="center" colspan="6" style="border-left:none;font-weight:bold">
+                                            Phí vận chuyển
+                                        </td>
+                                        <td style="width:87px; text-align:right;  border-right: none;font-weight:bold">
+                                            {{thongtinchung.PHI_VC | number:0}}
+                                        </td>
+                                        <td style="border-left: 0px !important">&nbsp;</td>
+                                    </tr>
                                     <tr height="30">
                                         <td align="center" colspan="6" style="border-left: none;font-weight:bold">
                                             Tổng cộng
                                         </td>
                                         <td style="width:87px;text-align:right;  border-right: none;font-weight:bold">
-                                            {{thongtinchung.TONG_TIEN_HANG + thongtinchung.TONG_TIEN_THUE_GTGT |  number:0}}
+                                            {{thongtinchung.TONG_TIEN_HANG + thongtinchung.TONG_TIEN_THUE_GTGT + thongtinchung.PHI_VC |  number:0}}
                                         </td>
                                         <td style="border-left: 0px !important">&nbsp;</td>
                                     </tr>
