--- a/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/POCanDuyet.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/POCanDuyet.cshtml
@@ -38,7 +38,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in list_PO_DangChoDuyet" ng-click="RedirectDuyetPO(item.MA_SO_PO)">
+                <tr ng-repeat="item in list_PO_DangChoDuyet" ng-click="RedirectDuyetPO(item.MA_SO_PO)" ng-mousedown="ChangeStatus(item.MA_SO_PO)">
                     <td>{{item.MA_SO_PO}}</td>
                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                     <td>{{item.TEN_CONG_TY}}</td>
